# redis-stig-audit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP-PILOT-TO-REVENUE.md  SECURITY-HARDENING-REPORT.md  audit.py  pyproject.toml  runner.py
.github/workflows/: release.yml  test.yml
benchmarks/: CIS_Redis_Container_Benchmark_v1.0.md
checks/: __init__.py  auth.py  base.py  config.py  cve_scanner.py  runtime.py
docs/: ASSESSOR_GUIDE.md  CVE_SCANNING.md  EVIDENCE_MODEL.md  METHODOLOGY.md  RUN_BENCHMARK.md
mappings/: __init__.py  control-matrix.json  frameworks.py
output/: bundle.py  report.py  sarif.py
rego/: redis_audit.rego
schemas/: results.schema.json  sarif.schema.ref.md
test/: FIXTURE-STATUS.md  README.md  run_fixtures.sh  test_checks.py
test/fixtures/: docker-compose.yml
test/fixtures/baseline/: redis.conf
test/fixtures/hardened/: redis.conf  users.acl
test/fixtures/vulnerable/: redis.conf
